# My_Gourmet

./: .env.example  .firebaserc  .gitignore  Makefile  README.md  analysis_options.yaml  firestore.rules  pubspec.yaml
.github/: pull_request_template.md
.github/workflows/: flutter_ci.yaml
android/: .gitignore  build.gradle
android/app/: build.gradle  google-services.json
cloud_run/: Dockerfile  Dockerfile.cloud  docker-compose.yaml  entrypoint.sh  pyproject.toml
cloud_run/api/: main.py
cloud_run/api/routers/: done.py  task.py
cloud_run/api/schemas/: classify_photos.py  task.py
ios/: .gitignore  Podfile  PrivacyInfo.xcprivacy  Runner.entitlements  firebase_app_id_file.json
ios/Flutter/: DartDefines.xcconfig  Debug.xcconfig  Release.xcconfig
ios/Runner/: AppDelegate.swift  GoogleService-Info.plist  Info.plist  Runner.entitlements
ios/Runner.xcodeproj/: project.pbxproj
ios/prod/: GoogleService-Info.plist
lib/: auth_controller.dart  auth_util.dart  classify_log.dart  classify_log_repository.dart  classify_login_main.dart  download.dart  final_main.dart  firebase_options.dart  function_util.dart  home_page.dart  home_page_controller.dart  logger.dart  login_main.dart  main.dart  my_home_page.dart  post.dart  timestamp_converter.dart  timestamp_converter.freezed.dart  ui_main.dart
lib/core/: analytics_repository.dart  build_context_extension.dart  camera_detail_page.dart  constants.dart  date_utils.dart  exception.dart  flavor.dart  guru_memo_card.dart  local_photo_repository.dart  logger.dart  my_gourmet_card.dart  permission_service.dart  photo_manager_service.dart  router.dart  shared_preferences_service.dart  themes.dart  timestamp_converter.dart  timestamp_converter.freezed.dart
lib/features/: home_page_controller.dart  onboarding_page.dart  root_page.dart
lib/view/: camera_detail_page.dart  camera_page.dart  classify_start_page.dart  home_page.dart  image_carousel.dart  image_detail_page.dart  login.dart  logout.dart  map_page.dart  my_page.dart  onboarding_page.dart  root_page.dart  swipe_photo_page.dart
linux/: CMakeLists.txt  my_application.cc
macos/: firebase_app_id_file.json
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/: GoogleService-Info.plist
macos/Runner.xcodeproj/: project.pbxproj
terraform/dev/: main.tf  terraform.tfstate  terraform.tfstate.1701696655.backup  terraform.tfvars
terraform/prod/: .terraform.lock.hcl  main.tf  my-gourmet-160fb-3f17914b9edb.json  terraform.tfstate.1701696927.backup  terraform.tfstate.backup  terraform.tfvars  variables.tf
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  (+1 more)
(+106 files in other folders)
